--- a/HOI4.html
+++ b/HOI4.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOI4</title>
-    <link href="/css/csssheet.css" rel="stylesheet">
+    <link href="./css/csssheet.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1aecc3b378.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,11 +16,14 @@
     </header>
     <main>
 
+        <div class="poster">
+            <img src="./img/Hoi4-logo.png">
+        </div>
         <div class="videos">
 
-            <video src="/vids/Trailer_hoi4.mp4" poster="/img/hoi4_posters/hoi4_poster.jpg" preload></video>
-            <video src="/vids/Alemania_hoi4.mp4" poster="/img/hoi4_posters/alemania_poster.jpg" preload></video>
-            <video src="/vids/Argentina_hoi4.mp4" poster="/img/hoi4_posters/argentina_poster.jpg" preload></video>
+            <video src="./vids/hoi4_vids/Trailer_hoi4.mp4" poster="./img/hoi4_posters/hoi4_poster.jpg" preload></video>
+            <video src="./vids/hoi4_vids/Alemania_hoi4.mp4" poster="./img/hoi4_posters/alemania_poster.jpg" preload></video>
+            <video src="./vids/hoi4_vids/Argentina_hoi4.mp4" poster="./img/hoi4_posters/argentina_poster.jpg" preload></video>
 
         </div>
 
@@ -94,7 +97,7 @@
                     en ciertos sectores de la sociedad, mayor productividad en alguna rama militar étc.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Politica.jpg">
+                    <img src="./img/Hoi4_tutorial/Politica.jpg">
                     
                 </div>
             </div>
@@ -125,7 +128,7 @@
                     caso entrar en guerra con un país con el que se estaba negociando, el comercio se cancela
                     automáticamente.
                 </p>
-                <img src="/img/Hoi4_tutorial/Comercio.jpg">
+                <img src="./img/Hoi4_tutorial/Comercio.jpg">
                 <p>
                     Por otro lado, nuestra industria dependerá de la cantidad de fábrica que uno tenga. Estas se
                     dividen
@@ -145,8 +148,8 @@
                     gastando 100 de poder político permite crear un slot más.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Construcciones.jpg">
-                    <img src="/img/Hoi4_tutorial/ProvinciaSlots.jpg">
+                    <img src="./img/Hoi4_tutorial/Construcciones.jpg">
+                    <img src="./img/Hoi4_tutorial/ProvinciaSlots.jpg">
                 </div>
                 <p>
                     Las fábricas militares por otro lado, se encargarán de realizar equipo para nuestro ejército
@@ -158,7 +161,7 @@
                     provocar que las unidades desplegadas o en entrenamiento se vean perjudicas
                     por la falta de equipo bajando drásticamente su efectividad en combate.
                 </p>
-                <img src="/img/Hoi4_tutorial/Producción.jpg">
+                <img src="./img/Hoi4_tutorial/Producción.jpg">
                 <p>
                     Finalmente, podemos hablar del desarrollo tecnologico, el cual nos permite incrementar mediante
                     beneficios de una gran gama de aspecto del país. En la pestaña de investigaciones, uno dispone
@@ -177,7 +180,7 @@
                     aumentar
                     el poder de combate de estas mediante la adquisición de armas y equipos más avanzados.
                 </p>
-                <img src="/img/Hoi4_tutorial/Investigacion.jpg">
+                <img src="./img/Hoi4_tutorial/Investigacion.jpg">
             </div>
         
             <div class="Militar" id="Militar">
@@ -210,8 +213,8 @@
                     mediante la puesta de generales como ministros en el gobierno.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Despliegue.jpg">
-                    <img src="/img/Hoi4_tutorial/Plantilla.jpg">
+                    <img src="./img/Hoi4_tutorial/Despliegue.jpg">
+                    <img src="./img/Hoi4_tutorial/Plantilla.jpg">
                 </div>
                 <p>
                     Una vez desplegadas, las divisiones o unidades necesitarán un comadante capaz de gestionarlas
@@ -236,8 +239,8 @@
                     velocidad de una flota y su funcionalidad.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Generales.jpg">
-                    <img src="/img/Hoi4_tutorial/Almirantes.jpg">
+                    <img src="./img/Hoi4_tutorial/Generales.jpg">
+                    <img src="./img/Hoi4_tutorial/Almirantes.jpg">
                 </div>
                 <p>
                     En el combate terrestre, el juego permite automatizar los enfrentamiento mediante el trazamiento
@@ -262,8 +265,8 @@
                     seguirán con sus antiguas órdenes.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Linea de Frente.jpg">
-                    <img src="/img/Hoi4_tutorial//MovilizacionEjercito.jpg">
+                    <img src="./img/Hoi4_tutorial/Linea de Frente.jpg">
+                    <img src="./img/Hoi4_tutorial//MovilizacionEjercito.jpg">
                 </div>
                 <p>
                     A su vez, las tropa terrestres podran recibir fuertes beneficios en el combate si son apoyados
@@ -282,8 +285,8 @@
                     la ubicación de la flota enemiga y poder interceptarla.
                 </p>
                 <div>
-                    <img src="/img/Hoi4_tutorial/Aviones.jpg">
-                    <img src="/img/Hoi4_tutorial/Batalla Naval.jpg">
+                    <img src="./img/Hoi4_tutorial/Aviones.jpg">
+                    <img src="./img/Hoi4_tutorial/Batalla Naval.jpg">
                 </div>
             </div>
         </div>
@@ -312,7 +315,7 @@
             <p class="copyright">Todos los derechos reservados</p>
         </div>
     </footer>
-    <script src="/js/javascriptsheet.js"></script>
+    <script src="./js/javascriptsheet.js"></script>
 </body>
 
 </html>
