--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSG Paradox</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/css/csssheet.css" rel="stylesheet">
+    <link href="./css/csssheet.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1aecc3b378.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header id="topnavbar">
-
+  <header id="topnavbarindex">
+    <nav>
+      <div class="menu">
+          <ul class="links">
+              <div class="logo">
+                  <img src="./img/logorm.jpg" alt="GSGP_Logo">
+              </div>
+              <li><a href="./index.html"> Inicio </a></li>
+              <div class="dropdown">
+                  <li><a href="#Juegos"> Juegos </a></li>
+                  <div class="dropdowncontent">
+                      <li><a href="./HOI4.html"> Hearts of Iron 4 </a></li>
+                      <li><a href="./EU4.html"> Europa Universalis 4 </a></li>
+                      <li><a href="./Stellaris.html"> Stellaris </a></li>
+                  </div>
+              </div>
+              <li><a href="./Login.html"> Login </a></li>
+          </ul>
+      </div>
+  </nav>
 </header>
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
   <div class="carousel-indicators">
@@ -21,13 +42,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/img/eu4_title.jpg" class="d-block w-100" alt="Europa Universalis Poster">
+      <img src="./img/eu4_title.jpg" class="d-block w-100" alt="Europa Universalis Poster">
     </div>
     <div class="carousel-item">
-      <img src="/img/hoi4_title.jpg" class="d-block w-100" alt="Hearts of Iron IV Poster">
+      <img src="./img/hoi4_title.jpg" class="d-block w-100" alt="Hearts of Iron IV Poster">
     </div>
     <div class="carousel-item">
-      <img src="/img/stellaris_title.jpg" class="d-block w-100" alt="Stellaris Poster">
+      <img src="./img/stellaris_title.jpg" class="d-block w-100" alt="Stellaris Poster">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -39,6 +60,14 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<h1> Paradox Interactive Developers</h1>
+<div class="paradoxiframe">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/zCQzBSLyEnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vObN-7dfKOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/NOZlfdhxDp0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 <footer>
   <div class="contacto">
       <p class="titulo">Contacto</p>
@@ -64,8 +93,6 @@
   </div>
 </footer>
 
-  <script src="/js/javascriptsheet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="/js/javascriptsheet.js"></script>
 </body>
 </html>
