--- a/EU4.html
+++ b/EU4.html
@@ -13,9 +13,7 @@
 <body>
     <header id="topnavbar">
 
-        <div class="auth">
-            <button class="login"> Inicio de Sesion </button>
-        </div>
+
 
     </header>
 
@@ -315,8 +313,9 @@
         <p class="copyright">Todos los derechos reservados</p>
     </div>
 </footer>
-
+    
     <script src="./js/javascriptsheet.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
