--- a/HOI4.html
+++ b/HOI4.html
@@ -315,7 +315,9 @@
             <p class="copyright">Todos los derechos reservados</p>
         </div>
     </footer>
+    
     <script src="./js/javascriptsheet.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
