--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                       <li><a href="./EU4.html"> Europa Universalis 4 </a></li>
                   </div>
               </div>
-              <li><a href="./Login.html"> Login </a></li>
+              <li><a href="./registro.html"  id="registro"> Registro </a></li>
+              <li><a href="./login.html" id="login"> Login </a></li>
           </ul>
       </div>
   </nav>
@@ -91,7 +92,7 @@
       <p class="copyright">Todos los derechos reservados</p>
   </div>
 </footer>
-
+    <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
