--- a/static/registro.html
+++ b/static/registro.html
@@ -28,7 +28,7 @@
                           <li><a href="./EU4.html"> Europa Universalis 4 </a></li>
                       </div>
                   </div>
-                  <li><a href="./Login.html"> Login </a></li>
+                  <li><a href="./login.html"> Login </a></li>
               </ul>
           </div>
       </nav>
