--- a/static/registro.html
+++ b/static/registro.html
@@ -35,7 +35,7 @@
     </header>
     <h1>Registro</h1>
     <main>
-    <form class="formulario" id="formulario" action="/login" method="POST">
+    <form class="formulario" id="formulario" action="#" method="POST">
         
         <div class="formgroup" id="idgroup">
             <label for="usuario" class="formulariolabel">Usuario:</label>
