--- a/static/login.html
+++ b/static/login.html
@@ -36,7 +36,7 @@
     </header>
     <h1>Login</h1>
 
-    <form class="formulario" id="formulario" action="#" method="POST">
+    <form class="formulario" id="formulario" action="#" onsubmit="return false;">
         
         <div class="formgroup" id="idgroup">
             <label for="usuario" class="formulariolabel">Usuario:</label>
