--- a/static/login.html
+++ b/static/login.html
@@ -55,7 +55,7 @@
 
 
         <div class="formgroup formgroup-btnenviar">
-            <button type="submit" class="formulariobtn" onclick="login()">Ingresar</button>
+            <button type="submit" class="formulariobtn" onclick="loguear()">Ingresar</button>
         </div>
     </form>
 
