Actualizado para Mysql local

--- a/static/EU4.html
+++ b/static/EU4.html
@@ -32,12 +32,12 @@
           <a class="dropdown-menu-element" href="./#">Stellaris</a>
         </div>
       </li>
-      <li><a href="./registro.html">Registro</a></li>
+      <li><a href="./registro.html" id="registro">Registro</a></li>
       <li><a href="./login.html" id="login"> Login </a></li>
     </ul>
   </section>
 
-  <div class="poster">
+  <div class="poster-eu4">
     <img src="./img/Europa universalis.png">
   </div>
 
