--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
           <a class="dropdown-menu-element" href="./#">Stellaris</a>
         </div>
       </li>
-      <li><a href="./registro.html">Registro</a></li>
+      <li><a href="./registro.html" id="registro">Registro</a></li>
       <li><a href="./login.html" id="login"> Login </a></li>
     </ul>
   </section>
